# Calculator

./: CMakeLists.txt  vcpkg.json
Include/: CMakeLists.txt  Constants.ixx  FunctionEvaluation.ixx  InputChecker.ixx
Tests/: CMakeLists.txt  Main.cpp
WxWidgetElements/: Application.cpp  Application.h  ApplicationFrame.cpp  ApplicationFrame.h  CMakeLists.txt  Calculator.cpp  DigitButton.cpp  DigitButton.h  InputField.cpp  InputField.h
